index front-end

--- a/Realisation version 2/remyurda/index.html
+++ b/Realisation version 2/remyurda/index.html
@@ -113,17 +113,17 @@
                                 <div class="col-md-6 mb-5">
                                     <!-- Feature item-->
                                     <div class="text-center">
-                                        <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Device Mockups</h3>
-                                        <p class="text-muted mb-0">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                        <i class="bi-window icon-feature text-gradient d-block mb-3"></i>
+                                        <h3 class="font-alt">Gestion des E-mails</h3>
+                                        <p class="text-muted mb-0">Personnalisation des E-mails assurée!</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mb-5">
                                     <!-- Feature item-->
                                     <div class="text-center">
-                                        <i class="bi-camera icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Flexible Use</h3>
-                                        <p class="text-muted mb-0">Put an image, video, animation, or anything else in the screen!</p>
+                                        <i class="bi-calendar-date icon-feature text-gradient d-block mb-3"></i>
+                                        <h3 class="font-alt">À l'heure</h3>
+                                        <p class="text-muted mb-0">L'envoie des messages selon le calendrier de vos clients!</p>
                                     </div>
                                 </div>
                             </div>
@@ -132,8 +132,8 @@
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <i class="bi-gift icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Free to Use</h3>
-                                        <p class="text-muted mb-0">As always, this theme is free to download and use for any purpose!</p>
+                                        <h3 class="font-alt">Utilisation gratuite</h3>
+                                        <p class="text-muted mb-0">Comme toujours, cette API est utilisable gratuitement à toutes fins!</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -141,7 +141,8 @@
                                     <div class="text-center">
                                         <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
                                         <h3 class="font-alt">Open Source</h3>
-                                        <p class="text-muted mb-0">Since this theme is MIT licensed, you can use it commercially!</p>
+                                        <p class="text-muted mb-0">
+                                            Vous pouvez voir le code source à tout moment sur Github!</p>
                                     </div>
                                 </div>
                             </div>
@@ -183,8 +184,8 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-5">
-                        <h2 class="display-4 lh-1 mb-4">Enter a new age of web design</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">This section is perfect for featuring some information about your application, why it was built, the problem it solves, or anything else! There's plenty of space for text here, so don't worry about writing too much.</p>
+                        <h2 class="display-4 lh-1 mb-4">Entrez dans une nouvelle ère </h2>
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">Vous êtes developpeur, vous possédez une application web et vous cherchez à rester en contact avec vos clients, leur envoyer des E-mails de rappel ou n'importe quelle sorte d'E-mail. Et bien c'est la bonne API pour vous.</p>
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="assets/img/code.jpg" alt="..." /></div>
@@ -208,7 +209,7 @@
         <!-- App badge section-->
         <section class="bg-gradient-primary-to-secondary" id="download">
             <div class="container px-5">
-                <h2 class="text-center text-white font-alt mb-4">Get the app now!</h2>
+                <h2 class="text-center text-white font-alt mb-4">N'attendez plus!</h2>
                 <!-- <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
                     <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." /></a>
                     <a href="#!"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." /></a>
@@ -219,7 +220,7 @@
         <footer class="bg-white text-center py-5">
             <div class="container px-5">
                 <div class="text-black-50 small">
-                    <div class="mb-2">&copy; Your Website 2021. All Rights Reserved.</div>
+                    <div class="mb-2">&copy; REMYURDA 2021. Tous les droits sont réservés.</div>
                     <a href="#!">Privacy</a>
                     <span class="mx-1">&middot;</span>
                     <a  href="#!">Terms</a>
