--- a/Realisation version 2/crud/dashboard.html
+++ b/Realisation version 2/crud/dashboard.html
@@ -33,7 +33,7 @@
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
 
-<script type="text/babel" src="js/sidebarDashboard.component.js"></script>
+<script type="text/babel" src="js/sidebarDash.component.js"></script>
 <script type="text/babel" src="js/crudDashboard.component.js"></script> 
   <script type="text/babel" src="js/menu2.component.js"></script>
   <script type="text/babel" src="js/card.component.js"></script>
