--- a/Realisation version 2/index.html
+++ b/Realisation version 2/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Remyurda</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="remyurda/assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="remyurda/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -34,7 +34,7 @@
                     <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" >
                         <span class="d-flex align-items-center">
                             <i class="bi-person-check me-2"></i>
-                            <span class="small"><a class="connexion" href="../login/index.html">Se Connecter </a></span>
+                            <span class="small"><a class="connexion" href="login/index.html">Se Connecter </a></span>
                         </span>
                     </button>
                 </div>
@@ -52,7 +52,7 @@
                             <div class="d-flex flex-column flex-lg-row align-items-center"> 
                                 <button class="btn btn-primary rounded-pill px-3  mb-lg-0" >
                                     <span class="d-flex align-items-center">
-                                        <span class="large"><a class="connexion" href="../login/index.html">Lancez-vous </a></span>
+                                        <span class="large"><a class="connexion" href="login/index.html">Lancez-vous </a></span>
                                     </span>
                                 </button>
                                 
@@ -82,7 +82,7 @@
                                         <!-- * * Set the max width of your media to 100% and the height to-->
                                         <!-- * * 100% like the demo example below.-->
                                         <!-- <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/img/notification.gif" type="video/mp4" /></video> -->
-                                        <IMG style="max-width: 100%; height: 100%" src="assets/img/email.jpg">
+                                        <IMG style="max-width: 100%; height: 100%" src="remyurda/assets/img/email.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -97,7 +97,7 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-11">
                         <div class="h2 fs-1 text-white mb-4">"Une solution intuitive à un problème commun auquel nous sommes tous confrontés, regroupée dans une seule application!"</div>
-                        <!-- <img src="assets/img/tnw-logo.svg" alt="..." style="height: 3rem" /> -->
+                        <!-- <img src="assets/img/tnw-logo.svg" alt="remyurda." style="height: 3rem" /> -->
                         
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                                         <!-- * * This can be a video, image, or just about anything else.-->
                                         <!-- * * Set the max width of your media to 100% and the height to-->
                                         <!-- * * 100% like the demo example below.-->
-                                        <IMG style="max-width: 100%; height: 100%" src="assets/img/email.jpg">
+                                        <IMG style="max-width: 100%; height: 100%" src="remyurda/assets/img/email.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">Vous êtes developpeur, vous possédez une application web et vous cherchez à rester en contact avec vos clients, leur envoyer des E-mails de rappel ou n'importe quelle sorte d'E-mail. Et bien c'est la bonne API pour vous.</p>
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="assets/img/code.jpg" alt="..." /></div>
+                        <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="remyurda/assets/img/code.jpg" alt="remyurda." /></div>
                     </div>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                         <br />
                         avec vos clients.
                     </h2>
-                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="../login/index.html" target="_blank">Inscrivez-vous</a>
+                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="login/index.html" target="_blank">Inscrivez-vous</a>
                 </div>
             </div>
         </section>
@@ -211,8 +211,8 @@
             <div class="container px-5">
                 <h2 class="text-center text-white font-alt mb-4">N'attendez plus!</h2>
                 <!-- <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
-                    <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." /></a>
-                    <a href="#!"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." /></a>
+                    <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="remyurda." /></a>
+                    <a href="#!"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="remyurda." /></a>
                 </div> -->
             </div>
         </section>
@@ -234,7 +234,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="remyurda/js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
