--- a/Realisation version 2/crud/mesEmails.html
+++ b/Realisation version 2/crud/mesEmails.html
@@ -35,7 +35,7 @@
 <script type="text/babel" src="js/email.component.js"></script>
   <script type="text/babel" src="js/crudEmail.component.js"></script>
   <script type="text/babel" src="js/sidebar.component.js"></script>
-  <script type="text/babel" src="js/menu.component.js"></script>
+  <script type="text/babel" src="js/menu1.component.js"></script>
   <script type="text/babel" src="js/app.component.js"></script>
   <script type="text/babel" src="js/script.js"></script>
 </body>
