--- a/Realisation version 2/login/index.html
+++ b/Realisation version 2/login/index.html
@@ -35,7 +35,7 @@
           <label for="check"><span class="icon"></span> Se souvenir de moi</label>
         </div>
         <div class="group">
-          <a href="../oK_frontend/dashboard.html"><input type="submit" class="button" value="Connexion"></a>
+         <input type="submit" class="button" value="Connexion">
         </div>
         <div class="hr"></div>
         <div class="foot-lnk">
