--- a/Realisation version 2/crud/error.html
+++ b/Realisation version 2/crud/error.html
@@ -23,8 +23,11 @@
             <div style="margin-top: 120px;"></div>
             <label style="color: white; padding: 13px; font-size: 16px;">Vérifier votre connexion à la base de données,</label> <br>
             <div style="margin-top: 20px;"></div>
-            <label style="color: white; padding: 20px; font-size: 16px;">sinon vous n'avez pas des E-mails à envoyer!</label>
-         <input style="margin-top: 60px;" type="submit" class="button" value="Retourner au Dashboard">
+            <label style="color: white; padding: 20px; font-size: 16px;">sinon vous n'avez pas des E-mails à envoyer</label>
+            <div style="margin-top: 20px;"></div>
+            <label style="color: white; padding: 123px; font-size: 16px;">pour aujourd'hui!</label>
+
+         <input style="margin-top: 30px;" type="submit" class="button" value="Retourner au Dashboard">
         </div>
     </div>
   </div>
